WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312769
REGRESSION(
306842@main
): [WPE] Build with ENABLE_WPE_PLATFORM=OFF fails
https://bugs.webkit.org/show_bug.cgi?id=312769
Summary
REGRESSION(306842@main): [WPE] Build with ENABLE_WPE_PLATFORM=OFF fails
Adrian Perez
Reported
2026-04-20 04:45:50 PDT
Found while trying to complete the distcheck for the 2.53.1 release, which makes a non-developer, release build: ---- 8< ---- 8< ---- In file included from /sdk/webkit/WebKitBuild/WPE/Release/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-32.cpp:1: /sdk/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp: In constructor ‘WebKit::AcceleratedSurface::AcceleratedSurface(WebKit::WebPage&, WTF::Function<void()>&&, RenderingPurpose, bool)’: /sdk/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:116:68: error: ‘class WebCore::Settings’ has no member named ‘hardwareAccelerationEnabled’ 116 | , m_hardwareAccelerationEnabled(webPage.corePage()->settings().hardwareAccelerationEnabled()) | ^~~~~~~~~~~~~~~~~~~~~~~~~~~ /sdk/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:120:25: error: ‘usesGL’ was not declared in this scope 120 | , m_useExplicitSync(usesGL() && useExplicitSync()) | ^~~~~~ /sdk/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp: In constructor ‘WebKit::AcceleratedSurface::SwapChain::SwapChain(WebKit::AcceleratedSurface&)’: /sdk/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:603:12: error: enumeration value ‘Surfaceless’ not handled in switch [-Werror=switch] 603 | switch (display.type()) { | ^ /sdk/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:603:12: error: enumeration value ‘GBM’ not handled in switch [-Werror=switch] /sdk/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp: In member function ‘void WebKit::AcceleratedSurface::didRenderFrame()’: /sdk/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:1055:9: error: ‘usesGL’ was not declared in this scope 1055 | if (usesGL()) | ^~~~~~ In file included from /sdk/webkit/WebKitBuild/WPE/Release/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-32.cpp:6: /sdk/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/NonCompositedFrameRenderer.cpp: In member function ‘bool WebKit::NonCompositedFrameRenderer::initialize()’: /sdk/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/NonCompositedFrameRenderer.cpp:68:20: error: ‘class WebKit::AcceleratedSurface’ has no member named ‘usesGL’ 68 | if (m_surface->usesGL()) { | ^~~~~~ cc1plus: all warnings being treated as errors
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2026-04-20 05:52:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63121
Adrian Perez
Comment 2
2026-04-20 09:12:37 PDT
There's a second hurdle after getting the first error ironed out, I'll update the patch to address this one as well: ---- 8< ---- 8< ---- /sdk/webkit/Source/WebKit/UIProcess/API/wpe/WebKitWebViewBackend.cpp:20:5: error: "USE" is not defined, evaluates to 0 [-Werror=undef] 20 | #if USE(LIBWPE) | ^~~ /sdk/webkit/Source/WebKit/UIProcess/API/wpe/WebKitWebViewBackend.cpp:20:8: error: missing binary operator before token "(" 20 | #if USE(LIBWPE) | ^
EWS
Comment 3
2026-04-20 23:50:46 PDT
Committed
311656@main
(dc1afde2e8b9): <
https://commits.webkit.org/311656@main
> Reviewed commits have been landed. Closing PR #63121 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug