REGRESSION(306842@main): [WPE] Build with ENABLE_WPE_PLATFORM=OFF fails https://bugs.webkit.org/show_bug.cgi?id=312769

Reviewed by Carlos Garcia Campos.

Avoid using the HardwareAccelerationEnabled preference when WPEPlatform
is disabled, and make the AcceleratedSurface::usesGL() helper return a
fixed value when ENABLE(WPE_PLATFORM) is disabled, because in that case
accelerated compositing is always used.

* Source/WebKit/UIProcess/API/wpe/WebKitWebViewBackend.cpp: Change order
of includes to ensure that the USE() macro is defined before using it.
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:
(WebKit::AcceleratedSurface::AcceleratedSurface):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.h:

Canonical link: https://commits.webkit.org/311656@main